# rssnews

./: .env.ask.example  .env.example  .gitignore  .mise.toml  ANALYSIS_AND_CORRECTIONS.md  ANALYZE_COMMAND_STATUS.md  ANALYZE_COMMAND_TRACE.md  ARTICLE_QUALITY_REPORT.md  ASK_COMMAND_AUDIT_REPORT.md  ASK_COMMAND_CHANGELOG.md  ASK_COMMAND_DETAILED_FLOW.md  ASK_COMMAND_FINAL_SUMMARY.md  ASK_COMMAND_IMPLEMENTATION_PLAN.md  ASK_COMMAND_LSH_FIX.md  ASK_SPRINT1_SUMMARY.md  CHUNKING_SERVICE_FIX_SUMMARY.md  COMMAND_ANALYSIS_REPORT.md  CONTAINER_COMMANDS.md  CRITICAL_FIX_CRON_ISSUE.md  DEPLOYMENT.md  DEPLOYMENT_RAILWAY.md  Dockerfile  EMBEDDING_TEST_GUIDE.md  EMBEDDING_TRUNCATION_FIX.md  FINAL_WORK_SUMMARY.md  FIX_BOT_NOT_RESPONDING.md  FOX_FEEDS_ADDED.md  FTS_OPENAI_KEY_EXPLANATION.md  FULL_COMMANDS_ANALYSIS.md  GPT5_COMPREHENSIVE_TEST_REPORT.md  LAUNCHER_CONFIGURATION.md  LLAMAINDEX_SETUP.md  LLM_CHUNKER_SINGLE_OBJECT_FIX.md  MIGRATION_README.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  OPENAI_GPT_SETUP_STEPS.md  PHASE2_3_DEPLOYMENT_REPORT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_README.md  (+219 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
net/: __init__.py  (+1 more)
stage6_hybrid_chunking/: .env.example  README.md  alembic.ini  pyproject.toml
stage6_hybrid_chunking/docs/: configuration.md  installation.md  usage.md
stage6_hybrid_chunking/migrations/: env.py
stage6_hybrid_chunking/migrations/versions/: 20241230_1430_001_add_llm_fields_to_article_chunks.py
stage6_hybrid_chunking/src/: celery_app.py
stage6_hybrid_chunking/src/chunking/: base_chunker.py  quality_router.py
stage6_hybrid_chunking/src/cli/: __init__.py  commands.py  main.py
stage6_hybrid_chunking/src/config/: settings.py
stage6_hybrid_chunking/src/db/: models.py
stage6_hybrid_chunking/src/llm/: gemini_client.py  ollama_client.py  prompts.py
stage6_hybrid_chunking/src/stage6/: __init__.py  coordinator.py  interfaces.py  pipeline.py  processor.py
stage6_hybrid_chunking/src/tasks/: __init__.py  tasks.py
stage6_hybrid_chunking/src/utils/: __init__.py  health.py  logging.py  metrics.py  tracing.py
stage6_hybrid_chunking/src/vector/: pinecone_client.py
stage6_hybrid_chunking/tests/: __init__.py  conftest.py  test_base_chunker.py  test_gemini_client.py  test_integration.py  test_pipeline.py  test_quality_router.py  test_utils.py
(+284 files in other folders)
